--- a/DemoPrototype/SettingsPage.xaml
+++ b/DemoPrototype/SettingsPage.xaml
@@ -111,28 +111,29 @@
         <Border Margin="5,5,10,5" BorderBrush="LightGray"  BorderThickness="2" CornerRadius="5" Grid.Row="0" Grid.RowSpan="4" Grid.Column="1" Grid.ColumnSpan="2">
             <StackPanel Orientation="Vertical">
                 <TextBlock Margin="5,5,0,5"  Text="Heat transfer fluid used"  FontWeight="SemiBold"></TextBlock>
-                <RelativePanel>
-                    <TextBlock Margin="5,5,0,0" Width="120" Name="Brand" Text="Brand"></TextBlock>
-                    <TextBox Margin="15,0,10,0" Name="InputBrand" Text="Texatherm 32" RelativePanel.RightOf="Brand" Width="150"></TextBox>
-                    <TextBlock Margin="5,18,0,0" Width="120" Name="Type" Text="Type" RelativePanel.Below="Brand"></TextBlock>
-                    <TextBox Margin="15,5,10,0" Name="InputType" Text="Mineral Oil" RelativePanel.RightOf="Type"  RelativePanel.Below="InputBrand" Width="150"></TextBox>
-                    <TextBlock Margin="5,18,0,0" Width="120" Name="Flash" Text="Flash point" RelativePanel.Below="Type"></TextBlock>
-                    <TextBox Margin="15,5,10,0" Name="FlashBox" Text="220" RelativePanel.RightOf="Flash"  RelativePanel.Below="InputType" Width="50"></TextBox>
-                    <TextBlock Margin="5,18,0,0"  Name="FlashEnd" Text="°C (exterior stains smoke)" RelativePanel.Below="Type"  RelativePanel.RightOf="FlashBox"></TextBlock>
-                    <TextBlock Margin="5,18,0,0" Width="120" Name="Boiling" Text="Boiling point" RelativePanel.Below="Flash"></TextBlock>
-                    <TextBox Margin="15,5,10,0" Name="BoilingBox" Text="316" RelativePanel.RightOf="Boiling"  RelativePanel.Below="FlashBox" Background="Yellow" Width="50"></TextBox>
-                    <TextBlock Margin="5,18,0,0"  Name="Danger" Text="°C (danger)" RelativePanel.Below="Flash"  RelativePanel.RightOf="BoilingBox"></TextBlock>
-                    <TextBlock Margin="5,18,0,0" Width="120" Name="Ignition" Text="Auto ignition" RelativePanel.Below="Boiling"></TextBlock>
-                    <TextBox Margin="15,5,10,0" Name="IgnitionBox" Text="320" RelativePanel.RightOf="Ignition"  RelativePanel.Below="BoilingBox" Background="Red" Width="50"></TextBox>
-                    <TextBlock Margin="5,18,0,0"  Name="Fire" Text="°C (fire)" RelativePanel.Below="Boiling"  RelativePanel.RightOf="IgnitionBox"></TextBlock>
-                    <TextBlock Margin="5,25,0,0" Width="120" Name="Save" Text="Save as" RelativePanel.Below="Ignition"></TextBlock>
-                    <TextBox Margin="15,20,10,0" Name="SaveBox"  RelativePanel.RightOf="Save" RelativePanel.Below="Fire" Width="150"></TextBox>
-                    <Button Content="Pick" Margin="5,20,0,0" RelativePanel.Below="Ignition" RelativePanel.RightOf="SaveBox"></Button>
-                    <TextBlock Margin="5,15,0,0" Width="120" Name="Recall" Text="Recall from" RelativePanel.Below="Save"></TextBlock>
-                    <TextBox Margin="15,10,10,0" Name="RecallBox"  RelativePanel.RightOf="Brand" RelativePanel.Below="Save" Width="150"></TextBox>
-                    <Button Content="Pick" Margin="5,10,0,10" RelativePanel.Below="Save" RelativePanel.RightOf="RecallBox"></Button>
-                </RelativePanel>
-            </StackPanel>
+                    <RelativePanel Margin="0,0,-0.333,0">
+                        <TextBlock Margin="5,5,0,0" Width="120" x:Name="Brand" Text="Brand"/>
+                        <TextBox Margin="15,0,10,0" x:Name="InputBrand" Text="Texatherm 32" RelativePanel.RightOf="Brand" Width="150"/>
+                        <TextBlock Margin="5,18,0,0" Width="120" x:Name="Type" Text="Type" RelativePanel.Below="Brand"/>
+                        <TextBox Margin="15,5,10,0" x:Name="InputType" Text="Mineral Oil" RelativePanel.RightOf="Type"  RelativePanel.Below="InputBrand" Width="150"/>
+                        <TextBlock Margin="5,18,0,0" Width="120" x:Name="Flash" Text="Flash point" RelativePanel.Below="Type"/>
+                        <TextBox Margin="15,5,10,0" x:Name="FlashBox" Text="220" RelativePanel.RightOf="Flash"  RelativePanel.Below="InputType" Width="50"/>
+                        <TextBlock Margin="5,18,0,0"  x:Name="FlashEnd" Text="°C (exterior stains smoke)" RelativePanel.Below="Type"  RelativePanel.RightOf="FlashBox"/>
+                        <TextBlock Margin="5,18,0,0" Width="120" x:Name="Boiling" Text="Boiling point" RelativePanel.Below="Flash"/>
+                        <TextBox Margin="15,5,10,0" x:Name="BoilingBox" Text="316" RelativePanel.RightOf="Boiling"  RelativePanel.Below="FlashBox" Background="Yellow" Width="50"/>
+                        <TextBlock Margin="5,18,0,0"  x:Name="Danger" Text="°C (danger)" RelativePanel.Below="Flash"  RelativePanel.RightOf="BoilingBox"/>
+                        <TextBlock Margin="5,18,0,0" Width="120" x:Name="Ignition" Text="Auto ignition" RelativePanel.Below="Boiling"/>
+                        <TextBox Margin="15,5,10,0" x:Name="IgnitionBox" Text="320" RelativePanel.RightOf="Ignition"  RelativePanel.Below="BoilingBox" Background="Red" Width="50"/>
+                        <TextBlock Margin="5,18,0,0"  x:Name="Fire" Text="°C (fire)" RelativePanel.Below="Boiling"  RelativePanel.RightOf="IgnitionBox"/>
+                        <TextBlock Margin="5,25,0,0" Width="120" x:Name="Save" Text="Save as" RelativePanel.Below="Ignition"/>
+                        <TextBox Margin="15,20,10,0" x:Name="SaveBox"  RelativePanel.RightOf="Save" RelativePanel.Below="Fire" Width="150" TextChanged="SaveBox_TextChanged"/>
+                        <Button x:Name="PickFluidFileSave" Content="Pick" Margin="5,20,0,0" RelativePanel.Below="Ignition" RelativePanel.RightOf="SaveBox" Click="PickFluidFileSave_Click"/>
+                        <TextBlock Margin="5,15,0,0" Width="120" x:Name="Recall" Text="Recall from" RelativePanel.Below="Save"/>
+                        <TextBox Margin="15,10,10,0" x:Name="RecallBox"  RelativePanel.RightOf="Brand" RelativePanel.Below="Save" Width="150"/>
+                        <Button x:Name="PickFluidFileRecall" Content="Pick" Margin="5,10,0,10" RelativePanel.Below="Save" RelativePanel.RightOf="RecallBox" Click="PickFluidFileRecall_Click"/>
+                        <Button x:Name="SaveFluidFile" Content="Save" Margin="71.333,20,-66.333,0" RelativePanel.Below="Ignition" RelativePanel.RightOf="SaveBox" RenderTransformOrigin="2.135,0.479" Click="SaveFluidFile_Click"/>
+                    </RelativePanel>
+                </StackPanel>
         </Border>
 
         <Border Margin="5,5,10,5" BorderBrush="LightGray"  BorderThickness="2" CornerRadius="5" Grid.Row="4" Grid.RowSpan="5" Grid.Column="1" Grid.ColumnSpan="1">
