--- a/DemoPrototype/SettingsPage.xaml
+++ b/DemoPrototype/SettingsPage.xaml
@@ -96,13 +96,24 @@
 
         <Border Margin="5,5,10,5" BorderBrush="LightGray"  BorderThickness="2" CornerRadius="5" Grid.Row="4">
             <StackPanel Orientation="Vertical">
-                <TextBlock Margin="5,5,0,5"  Text="Only used for testing communication"  FontWeight="SemiBold"></TextBlock>
+                <TextBlock Margin="5,5,0,5"  Text="Only used for testing communication. Ask for:"  FontWeight="SemiBold"></TextBlock>
                 <StackPanel Margin="5,0,5,5" Orientation="Horizontal" >
-                    <Button Name="AskForSetHotTankTemp" Margin="0,5,5,5"   Content="AskForSetTankTemp" Click="AskForSetHotTankTemp_Click"></Button>
-                    <Button Name="AskForSetColdTankTemp"  Margin="5,5,5,5" Content="AskForMouldingTimes" Click="AskForSetColdTankTemp_Click"></Button>
-                    <Button Name="AskForDelayTimes"  Margin="5,5,5,5" Content="AskForDelayTimes" Click="AskForSetColdTankTemp_Click"></Button>
-                    <Button Name="Ask"  HorizontalAlignment="Right" Margin="5,5,5,5" Content="AskForThresholds" Click="AskForSetColdTankTemp_Click"></Button>
+                    <Button Name="AskForSetHotTankTemp" Margin="0,5,5,5"   Content="SetHotTankTemp" Click="AskForSetHotTankTemp_Click"></Button>
+                    <Button Name="AskForSetColdTankTemp"  Margin="5,5,5,5" Content="SetColdTankTemp" Click="AskForSetColdTankTemp_Click"></Button>
                 </StackPanel>
+                <StackPanel Margin="5,5,0,5" Orientation="Horizontal" >
+                    <Button Name="AskForTHot2Cold"  Margin="0,5,5,5" Content="THot2Cold" Click="AskForTHot2Cold_Click"></Button>
+                    <Button Name="AskForTCold2Hot"  HorizontalAlignment="Right" Margin="5,5,5,5" Content="TCold2Hot" Click="AskForTCold2Hot_Click"></Button>
+                    <Button Name="AskForTMidBuf" HorizontalAlignment="Right" Margin="5,5,5,5" Content="TMidBuf" Click="AskForTMidBuf_Click"></Button>
+                </StackPanel>
+                <StackPanel Margin="5,5,0,5" Orientation="Horizontal" >
+                    <Button Name="AskForActiveHeating"  Margin="0,5,5,5" Content="HeatActive" Click="AskForActiveHeating_Click"></Button>
+                    <Button Name="AskForActiveCooling"  HorizontalAlignment="Right" Margin="5,5,5,5" Content="CoolActive" Click="AskForActiveCooling_Click"></Button>
+                    <Button Name="AskForHeatingPause" HorizontalAlignment="Right" Margin="5,5,5,5" Content="HeatPause" Click="AskForHeatingPause_Click"></Button>
+                    <Button Name="AskForCoolingPause" HorizontalAlignment="Right" Margin="5,5,5,5" Content="CoolPause" Click="AskForCoolingPause_Click"></Button>
+                </StackPanel>
+
+
             </StackPanel>
         </Border>
 
