--- a/DemoPrototype/CalibratePage.xaml
+++ b/DemoPrototype/CalibratePage.xaml
@@ -22,6 +22,7 @@
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="50"></RowDefinition>
             <RowDefinition Height="50"></RowDefinition>
+          
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="3*"></ColumnDefinition>
@@ -87,13 +88,13 @@
 
         <StackPanel Margin="30,0,0,0" Orientation="Horizontal" Grid.Column="0" Grid.Row="2">
             <Button HorizontalAlignment="Center" VerticalAlignment="Center" Width="100" Content="Hot step" Click="DoHotStep" Name="HotStepButton"></Button>
-            <TextBox  Margin="10,0,0,0" VerticalAlignment="Center" Text="10" Name="CalibrateHotStepValue"></TextBox>
+            <TextBox  Margin="10,0,0,0" VerticalAlignment="Center" Text="999" IsReadOnly="True" Name="CalibrateHotStepValue"></TextBox>
             <TextBlock VerticalAlignment="Center"  Text=" (s)"></TextBlock>
         </StackPanel>
 
         <StackPanel  Margin="30,0,0,0" Orientation="Horizontal" Grid.Column="0" Grid.Row="3">
             <Button Grid.Row="2" Grid.Column="1"  VerticalAlignment="Center" Width="100" Content="Cold step" Click="DoColdStep" Name="ColdStepButton"></Button>
-            <TextBox  Margin="10,0,0,0" VerticalAlignment="Center" Text="10" Name="CalibrateColdStepValue"></TextBox>
+            <TextBox  Margin="10,0,0,0" VerticalAlignment="Center" Text="999" IsReadOnly="True" Name="CalibrateColdStepValue"></TextBox>
             <TextBlock VerticalAlignment="Center"  Text=" (s)"></TextBlock>
         </StackPanel>
 
@@ -138,7 +139,7 @@
         <TextBlock Margin="55,11,0,0" VerticalAlignment="Center" Grid.Row="3" Grid.Column="7" Grid.ColumnSpan="2" HorizontalAlignment="Left"  Text="Total"></TextBlock>
 
         <TextBlock Margin="30,0,0,0" Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="2" Text="Computed" VerticalAlignment="Top" HorizontalAlignment="Left"></TextBlock>
-        <TextBlock Margin="0,0,0,0" Grid.Row="4" Grid.Column="5" Width="30" HorizontalAlignment="Right" Name="F2MCalComputed" VerticalAlignment="Top"  Text="88"></TextBlock>
+        <TextBlock Margin="0,0,0,0" Grid.Row="4" Grid.Column="5" Width="30" HorizontalAlignment="Right" Name="F2MCalComputed" VerticalAlignment="Top"  Text="88" RenderTransformOrigin="0.7,0.55"></TextBlock>
         <TextBlock Grid.Row="4" Grid.Column="6" VerticalAlignment="Top"  HorizontalAlignment="Left" Width="30" Margin="30,0,0,0" Text="+"></TextBlock>
         <TextBlock Grid.Row="4" Grid.Column="6" Name="F2MTuneComputed" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,0,0,0"  Width= "30" Text="22"></TextBlock>
         <TextBlock  Grid.Row="4" Grid.Column="7" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,0,0,0" Text="="></TextBlock>
@@ -192,6 +193,7 @@
             </chart:SfChart.Annotations>
             <!--   <chart:SplineSeries Name="Series_EB_THotTank" LegendIcon="Circle" Label="THotTank"  XBindingPath="ElapsedTime" YBindingPath="THotTank" ItemsSource="{Binding power}"></chart:SplineSeries> -->
             <chart:SplineSeries Name="Series_EB_TRetActual" LegendIcon="Circle" Label="TRetActual" XBindingPath="ElapsedTime" YBindingPath="TReturnActual" ItemsSource="{Binding power}"></chart:SplineSeries>
+            <chart:SplineSeries Name="Series_EB_TRetFlowActive" LegendIcon="Circle" Label="TRetFlowActive" XBindingPath="ElapsedTime" YBindingPath="TReturnForecasted" ItemsSource="{Binding power}"></chart:SplineSeries>
             <!--     <chart:SplineSeries Name="Series_EB_TColdTank" LegendIcon="Circle" Label="TColdTank"  XBindingPath="ElapsedTime" YBindingPath="TColdTank" ItemsSource="{Binding power}"></chart:SplineSeries>
          -->
             <chart:StepLineSeries Name="Series_EB_ValveReturn" LegendIcon="Circle"  Label="ValveReturn" XBindingPath="ElapsedTime" YBindingPath="ValveReturn" ItemsSource="{Binding power}"></chart:StepLineSeries>
@@ -240,9 +242,14 @@
                 <chart:HorizontalLineAnnotation Name="TBufMidHLine" CanDrag="True"  ShowAxisLabel="True" DragCompleted="TBufMidHLine_DragCompleted" ShowToolTip="True"  CoordinateUnit="Axis" ></chart:HorizontalLineAnnotation>
                 <chart:HorizontalLineAnnotation Name="TBufColdHLine" CanDrag="True"  ShowAxisLabel="True" DragCompleted="TBufColdHLine_DragCompleted" ShowToolTip="True"   CoordinateUnit="Axis"></chart:HorizontalLineAnnotation>
             </chart:SfChart.Annotations>
-            <chart:SplineSeries Name="Series_VB_THotBuffer"  Label="TBuHot" XBindingPath="ElapsedTime" YBindingPath="TBufferHot" ItemsSource="{Binding power}"></chart:SplineSeries>
+        <!--   <chart:SplineSeries Name="Series_VB_THotBuffer"  Label="TBuHot" XBindingPath="ElapsedTime" YBindingPath="TBufferHot" ItemsSource="{Binding power}"></chart:SplineSeries>
             <chart:SplineSeries Name="Series_VB_TMidBuffer"  Label="TBuCold" XBindingPath="ElapsedTime" YBindingPath="TBufferMid" ItemsSource="{Binding power}"></chart:SplineSeries>
             <chart:SplineSeries Name="Series_VB_TColdBuffer"  Label="TBuMid" XBindingPath="ElapsedTime" YBindingPath="TBufferCold" ItemsSource="{Binding power}"></chart:SplineSeries>
+    -->
+            <chart:StepLineSeries Name="Series_VB_ValveReturn" LegendIcon="Circle"  Label="ValveReturn" XBindingPath="ElapsedTime" YBindingPath="ValveReturn" ItemsSource="{Binding power}"></chart:StepLineSeries>
+            <chart:SplineSeries Name="Series_VB_DeltaHot"  Label="DeltaHot" XBindingPath="ElapsedTime" YBindingPath="THeatExchangerCoolantOut" ItemsSource="{Binding power}"></chart:SplineSeries>
+            <chart:SplineSeries Name="Series_VB_DeltaCold"  Label="DeltaCold" XBindingPath="ElapsedTime" YBindingPath="THeaterOilOut" ItemsSource="{Binding power}"></chart:SplineSeries>
+
         </chart:SfChart>
 
         <TextBlock Margin="30,0,0,0" Grid.Column="2" Grid.ColumnSpan="3" Grid.Row="10" VerticalAlignment="Center" Text="Buffertank mid threshold value:"></TextBlock>
