--- a/DemoPrototype/CalibratePage.xaml
+++ b/DemoPrototype/CalibratePage.xaml
@@ -83,7 +83,7 @@
             <chart:SplineSeries Name="Series_Delay_TColdTank" LegendIcon="Circle" Label="TColdTank"  XBindingPath="ElapsedTime" YBindingPath="TColdTank" ItemsSource="{Binding power}"></chart:SplineSeries>
         </chart:SfChart>
         <!-- Use overlay textbox for showing diff result -->
-        <TextBox Grid.Column="1" Grid.Row="3" Name="CalibratePhaseDiffResult" HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="0" Background="Yellow" Text="2.31 s"></TextBox>
+        <TextBox Grid.Column="1" Grid.Row="3" Name="CalibratePhaseDiffResult" HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="0" Background="Yellow" Text="- s"></TextBox>
 
 
         <StackPanel Margin="30,0,0,0" Orientation="Horizontal" Grid.Column="0" Grid.Row="2">
