--- a/DemoPrototype/TunePage.xaml
+++ b/DemoPrototype/TunePage.xaml
@@ -47,7 +47,7 @@
 
 
         <Border  Margin="5,5,10,5" Grid.Row="8" Grid.RowSpan="3" Grid.Column="0" Grid.ColumnSpan="12" BorderBrush="LightGray" BorderThickness="2" CornerRadius="5">
-            <StackPanel Orientation="Vertical">
+            <StackPanel Orientation="Vertical" >
                 <TextBlock Margin="5,0,0,0" Text="Balancing" FontWeight="SemiBold"></TextBlock>
 
             </StackPanel>
@@ -103,7 +103,7 @@
         <TextBlock  VerticalAlignment="Center" Margin="2,0,0,0"  Grid.Row="5" Grid.Column="9"  HorizontalAlignment="Center" Text="="></TextBlock>
         <TextBlock Name="F2MTotalText" VerticalAlignment="Center" Grid.Row="5" Grid.Column="10" Margin="5,0,0,0" Text="111"></TextBlock>
 
-        <TextBlock  Margin="50,0,0,0"  Grid.Row="6" VerticalAlignment="Center" Grid.Column="6" Text="Used"></TextBlock>
+        <TextBlock  Margin="50,0,0,0"  Grid.Row="6" VerticalAlignment="Center" Grid.Column="6" Text="Use"></TextBlock>
         <TextBlock Grid.Row="6" Grid.Column="7" Name="F2MCalUsedText" VerticalAlignment="Center"  HorizontalAlignment="Left" Margin="20,0,0,0" Text="110"></TextBlock>
         <TextBlock Grid.Row="6" Grid.Column="8" VerticalAlignment="Center" Margin="10,0,0,0" Text="+"></TextBlock>
         <TextBox Grid.Row="6" Grid.Column="8" Grid.ColumnSpan="2" Width="30" Margin="44,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" Name="F2MTuneUsedText"  GotFocus="F2MTuneUsedText_GotFocus" TextChanged="F2MTuneUsedText_TextChanged"  IsReadOnly="True"  Text="33"></TextBox>
