--- a/DemoPrototype/CalibratePage.xaml
+++ b/DemoPrototype/CalibratePage.xaml
@@ -87,7 +87,7 @@
             <chart:SplineSeries Name="Series_Delay_TColdTank" LegendIcon="Circle" Label="TColdTank"  XBindingPath="ElapsedTime" YBindingPath="TColdTank" ItemsSource="{Binding power}"></chart:SplineSeries>
         </chart:SfChart>
         <!-- Use overlay textbox for showing diff result -->
-        <TextBox Grid.Column="1" Grid.Row="3" Name="CalibratePhaseDiffResult" HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="0" Background="Yellow" Text="- s"></TextBox>
+        <TextBox Grid.Column="3" Grid.Row="3" Name="CalibratePhaseDiffResult" HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="0" Background="Yellow" Text="- s"></TextBox>
 
 
         <StackPanel Margin="30,0,0,0" Orientation="Horizontal" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2">
@@ -247,8 +247,8 @@
             <chart:SplineSeries Name="Series_VB_TColdBuffer"  Label="TBuMid" XBindingPath="ElapsedTime" YBindingPath="TBufferCold" ItemsSource="{Binding power}"></chart:SplineSeries>
     -->
             <chart:StepLineSeries Name="Series_VB_ValveReturn" LegendIcon="Circle"  Label="ValveReturn" XBindingPath="ElapsedTime" YBindingPath="ValveReturn" ItemsSource="{Binding power}"></chart:StepLineSeries>
-            <chart:SplineSeries Name="Series_VB_DeltaHot"  Label="DeltaHot" XBindingPath="ElapsedTime" YBindingPath="THeatExchangerCoolantOut" ItemsSource="{Binding power}"></chart:SplineSeries>
-            <chart:SplineSeries Name="Series_VB_DeltaCold"  Label="DeltaCold" XBindingPath="ElapsedTime" YBindingPath="THeaterOilOut" ItemsSource="{Binding power}"></chart:SplineSeries>
+            <chart:SplineSeries Name="Series_VB_DeltaHot"  Label="DeltaHot" XBindingPath="ElapsedTime" YBindingPath="DeltaHot" ItemsSource="{Binding power}"></chart:SplineSeries>
+            <chart:SplineSeries Name="Series_VB_DeltaCold"  Label="DeltaCold" XBindingPath="ElapsedTime" YBindingPath="DeltaCold" ItemsSource="{Binding power}"></chart:SplineSeries>
 
         </chart:SfChart>
 
