--- a/DemoPrototype/CalibratePage.xaml
+++ b/DemoPrototype/CalibratePage.xaml
@@ -287,20 +287,20 @@
 
         <!-- Volume active timing -->
 
-        <TextBlock Grid.Row="10" Grid.Column="6" Grid.ColumnSpan="2"  Margin="50,10,0,0"  Text="Change Return Valve Switching" VerticalAlignment="Top"></TextBlock>
-        <TextBlock Grid.Row="10" Grid.Column="6" Grid.ColumnSpan="2"  Margin="50,26,0,0"  Text="Period (s)" VerticalAlignment="Top"></TextBlock>
-        <TextBlock Margin="20,10,0,0" Grid.Row="10" Grid.Column="8"  HorizontalAlignment="Left"> Calibrate</TextBlock>
-        <TextBlock Margin="10,10,0,0" Grid.Row="10" Grid.Column="9" Grid.ColumnSpan="3" Text="+"></TextBlock>
-        <TextBlock Margin="0,10,0,0" Grid.Row="10" Grid.Column="9"   HorizontalAlignment="Right" Text="Tune"></TextBlock>
-        <TextBlock Margin="2,10,0,0" Grid.Row="10" Grid.Column="10" HorizontalAlignment="Center" Text="="></TextBlock>
-        <TextBlock Margin="0,10,0,0" Grid.Row="10" Grid.Column="11"  Text="Total"></TextBlock>
+        <TextBlock Grid.Row="10" Grid.Column="6" Grid.ColumnSpan="3"  Margin="50,10,0,0"  Text="Change Return Valve Switching Period (s)" VerticalAlignment="Top"></TextBlock>
+        <TextBlock Grid.Row="10" Grid.Column="6" Grid.ColumnSpan="2"  Margin="50,26,0,0"  Text="" VerticalAlignment="Top"></TextBlock>
+        <TextBlock Margin="70,10,0,0" Grid.Row="10" Grid.Column="8" Grid.ColumnSpan="2" > Calibrate</TextBlock>
+        <TextBlock Margin="50,10,0,0" Grid.Row="10" Grid.Column="9" HorizontalAlignment="Right" Grid.ColumnSpan="1"  Text="+"></TextBlock>
+        <TextBlock Margin="20,10,0,0" Grid.Row="10" Grid.Column="10"   HorizontalAlignment="Left" Text="Tune"></TextBlock>
+        <TextBlock Margin="0,10,0,0" Grid.Row="10" Grid.Column="11" Grid.ColumnSpan="2"  Text="="></TextBlock>
+        <TextBlock Margin="0,10,0,0" Grid.Row="10" Grid.Column="11" HorizontalAlignment="Right"  Text="Total"></TextBlock>
 
         <TextBlock  Margin="50,20,0,0"  Grid.Row="10" Grid.ColumnSpan="2" VerticalAlignment="Center" Grid.Column="6" Text="Volume active timing"></TextBlock>
-        <TextBox Grid.Row="10" Grid.Column="8" Name="VACalText"  GotFocus="VACalText_GotFocus" TextChanged="VACalText_TextChanged" VerticalAlignment="Center"  HorizontalAlignment="Left" Margin="20,20,0,0" Text="110"></TextBox>
-        <TextBlock Grid.Row="10" Grid.Column="9" VerticalAlignment="Center" Margin="10,20,0,0" Text="+"></TextBlock>
-        <TextBlock Grid.Row="10" Grid.Column="9" Grid.ColumnSpan="2" Width="30" Margin="44,20,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" Name="VATuneText"  Text="33"></TextBlock>
-        <TextBlock  Grid.Row="10" Grid.Column="10" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="2,20,0,0" Text="="></TextBlock>
-        <TextBlock  Grid.Row="10" Grid.Column="11" Name="VATotalText" Margin="5,20,0,0" VerticalAlignment="Center" Text="122"></TextBlock>
+        <TextBox Grid.Row="10" Margin="70,20,0,0" Grid.Column="8" Grid.ColumnSpan="2" HorizontalAlignment="Left" Name="VACalText"  GotFocus="VACalText_GotFocus" TextChanged="VACalText_TextChanged" VerticalAlignment="Center"   Text="110"></TextBox>
+        <TextBlock Grid.Row="10" Grid.Column="9" VerticalAlignment="Center" Margin="50,20,0,0" HorizontalAlignment="Right" Text="+"></TextBlock>
+        <TextBlock Grid.Row="10" Grid.Column="10" Grid.ColumnSpan="2" Width="30" Margin="20,20,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" Name="VATuneText"  Text="33"></TextBlock>
+        <TextBlock  Grid.Row="10" Grid.Column="11" Grid.ColumnSpan="2" VerticalAlignment="Center"  Margin="2,20,0,0" Text="="></TextBlock>
+        <TextBlock  Grid.Row="10" Grid.Column="11" Name="VATotalText" Margin="5,20,0,0" VerticalAlignment="Center" HorizontalAlignment="Right" Text="122"></TextBlock>
 
 
     </Grid>
